--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,3 @@
-<!-- <form (ngSubmit)="login()" >
-    <input required text="text" id="username" name="username" [(ngModel)]="username" />
-    <input required text="password" id="password" name="password" [(ngModel)]="password" />
-    <button type="submit" >Connexion</button>
-</form> -->
 <div class="login-container">
     <h2>Login</h2>
     <div *ngIf="errorMessage" class="error-message">
@@ -17,7 +12,11 @@
         <label for="password">Mot de Passe:</label>
         <input type="password" id="password" name="password" [(ngModel)]="password" required>
       </div>
-      <button type="submit" >Log in</button>
+      <button type="submit" [disabled]="isFetching" >
+        <span *ngIf="!isFetching" >Log in</span>
+        <mat-spinner  style="margin-left: 45%;" color="accent" *ngIf="isFetching" diameter="15" ></mat-spinner>
+      </button>
+      
     </form>
   </div>
   
