--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 /* styles.css (pour les styles globaux) */
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -34,8 +37,9 @@ body {
   
   .login-container button {
     width:  100%;
+    min-height: 40px;
     padding:  12px;
-    background-color: #007bff;
+    background-color: #3f51b5;
     color: white;
     border: none;
     cursor: pointer;
@@ -47,3 +51,19 @@ body {
   
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
