--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,9 @@
   <mat-toolbar-row>
     <span>Beauty</span>
     <span class="spacer" ></span>
-    <button mat-button (click)="logout()" >Deconnexion</button>
+    <button mat-button [matMenuTriggerFor]="menu" ><mat-icon>menu</mat-icon></button>
+    <mat-menu #menu="matMenu" >
+      <button mat-menu-item (click)="logout()" >Déconnexion<mat-icon>logout</mat-icon></button>
+    </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
