--- a/src/app/rdv/rdv.component.css
+++ b/src/app/rdv/rdv.component.css
@@ -4,7 +4,9 @@
     gap: 10px;
     background-color: gray;
     width: 100%;
-    min-height: 100px;
+    min-height: 200px;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
 .container .item{
