--- a/src/app/rdv/rdv.component.html
+++ b/src/app/rdv/rdv.component.html
@@ -1,14 +1,20 @@
 <h1>Nouveau RDV</h1>
-<h2>Liste des services disponibles</h2> 
+<h2>Choix de la date et de l'heure</h2>
+<mat-form-field>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
+<h2>Choix des services</h2> 
 <mat-grid-list cols="2" gutterSize="10px" rowHeight="{{rowHeight}}px" >
     <mat-grid-tile>
-        <div class="container" cdkDropList id="sourceList" [cdkDropListConnectedTo]="['targetList']" [cdkDropListData]="sourceList" (cdkDropListDropped)="drop($event)" >
-            <div class="item" *ngFor="let item of sourceList" cdkDrag>{{item}}</div>
+        <div class="container" cdkDropList id="services" [cdkDropListConnectedTo]="['targetServices']" [cdkDropListData]="services" (cdkDropListDropped)="drop($event)" >
+            <div class="item" *ngFor="let item of services" cdkDrag>{{item.nom}} - {{item.delai}}min - {{item.prix}}Ar</div>
         </div>
     </mat-grid-tile>
     <mat-grid-tile>
-        <div class="container" cdkDropList id="targetList"  [cdkDropListConnectedTo]="['sourceList']" [cdkDropListData]="targetList" (cdkDropListDropped)="drop($event)">
-            <div class="item" *ngFor="let item of targetList" cdkDrag >{{item}}</div>
+        <div class="container" cdkDropList id="targetServices"  [cdkDropListConnectedTo]="['services']" [cdkDropListData]="targetServices" (cdkDropListDropped)="drop($event)">
+            <div class="item" *ngFor="let item of targetServices" cdkDrag >{{item.nom}} - {{item.delai}}min - {{item.prix}}Ar</div>
         </div>
     </mat-grid-tile>
 </mat-grid-list>
