--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,26 +5,28 @@
         <a mat-list-item routerLink="/home">Accueil</a>
         <a  mat-list-item routerLink="/rdv">RDV</a>
       </mat-nav-list>
-      <mat-accordion multi="false" >
-        <mat-expansion-panel *ngIf="isEmploye()" >
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Employé
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-nav-list>
-                <a mat-list-item routerLink="/lien1">Lien 1</a>
-                <a mat-list-item routerLink="/lien2">Lien 2</a>
-                <a mat-list-item routerLink="/lien3">Lien 3</a>
-              </mat-nav-list>
-          </mat-expansion-panel>
-          <mat-expansion-panel *ngIf="isManager()" >
+      <mat-accordion multi="false"  >
+        <mat-nav-list *ngIf="isEmploye()" > 
+            <a mat-list-item routerLink="/lien1">Mon Profil</a>
+            <a mat-list-item routerLink="/lien1">Mon emploi du temps</a>
+            <a mat-list-item routerLink="/lien1">Mes taches</a>
+          </mat-nav-list>
+      <mat-expansion-panel *ngIf="isEmploye()" >
+        <mat-expansion-panel-header>
+            <mat-panel-title>  Rendez-vous </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+            <a mat-list-item routerLink="/HistoriqueRDV">Historique</a>
+            <a mat-list-item routerLink="/listeRDV">Aujourd'hui</a>
+          </mat-nav-list>
+      </mat-expansion-panel>
+      <mat-expansion-panel *ngIf="isManager()" >
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Manager
                 </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-nav-list>
+      </mat-expansion-panel-header>
+              <mat-nav-list>
                 <a mat-list-item routerLink="/lien1">Lien 1</a>
                 <a mat-list-item routerLink="/lien2">Lien 2</a>
                 <a mat-list-item routerLink="/lien3">Lien 3</a>
