--- a/src/app/rdv/liste-today/rdv-liste.component.html
+++ b/src/app/rdv/liste-today/rdv-liste.component.html
@@ -3,24 +3,24 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Nom Service & Delai</th>
         <th>Date et heure</th>
         <th>Client</th>
-        <th>Etat</th>
+        <th>Service</th>
+        <th>État</th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngFor="let rdv of rendezVous">
         <tr>
-          <div *ngFor="let service of rdv.service">
-            <td class="service-details">
-              <a [routerLink]="['/ficheService', service.idService]">{{ service.nom }}</a>
-              <span>{{ service.delai }} minutes</span>
-            </td>
-          </div>
           <td>{{ rdv.dateHeure | date:'short' }}</td>
           <td>client mbola alaina</td>
-          <td>{{ rdv.etat }}</td>
+          <td>
+            <div *ngFor="let service of rdv.service" class="service-details">
+              <p><a [routerLink]="['/ficheService', service.idService]">{{ service.nom }}</a></p>
+              <p>{{ service.delai }} minutes</p>
+            </div>
+          </td>
+          <td>{{ rdv.service[0].etat }}</td>
         </tr>
       </ng-container>
     </tbody>
