--- a/src/app/service/ficheService/service.fiche.component.css
+++ b/src/app/service/ficheService/service.fiche.component.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .service-card {
   width: 90%; /* Largeur de la carte */
+  height: 100%;
   max-width: 400px; /* Largeur maximale */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Ombre douce */
   border-radius: 12px; /* Coins arrondis */
