--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,20 +1,21 @@
 .footer {
-    background-color: #2c3e50; /* Couleur de fond */
-    color: #ffffff; /* Couleur du texte */
+    background-color: #AFE3C0; /* Couleur de fond */
+    color: #000000; /* Couleur du texte */
     text-align: center; /* Alignement du texte au centre */
     padding: 20px; /* Espacement intérieur */
-    font-size: 16px; /* Taille de la police */
+    font-size: 12px; /* Taille de la police */
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Police de caractère */
-    border-top: 3px solid #e67e22; /* Bordure supérieure */
+    /* border-top: 3px solid #e67e22; Bordure supérieure */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
   }
   
-  .footer span {
-    display: block; /* Afficher le texte sur une nouvelle ligne */
+  .footer p {
+    /* display: block; Afficher le texte sur une nouvelle ligne */
+    text-align: center;
   }
   
   .footer a {
-    color: #ffffff; /* Couleur des liens */
+    color: #000000; /* Couleur des liens */
     text-decoration: none; /* Supprimer la soulignement des liens */
     transition: color 0.3s ease; /* Transition fluide de la couleur au survol */
   }
