--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary" class="footer">
-  <span>By RABEARIMANANA HARINIAINA Kanto Fanjava & RANADISON Koloinanirina Diamondra</span>
+  <p style="text-align: center;">By RABEARIMANANA HARINIAINA Kanto Fanjava & RANADISON Koloinanirina Diamondra</p>
 </mat-toolbar>
