--- a/src/app/gestion-service/gestion-service.component.css
+++ b/src/app/gestion-service/gestion-service.component.css
@@ -35,4 +35,13 @@
       color: #3498db; /* Couleur bleue pour les liens */
       margin-right: 8px; /* Espacement à droite */
     }
+
+    .btn{
+        background-color: #2c5044;
+        color: #ffffff; /* Couleur du texte */
+        text-align: center; /* Alignement du texte au centre */
+        padding: 20px; /* Espacement intérieur */
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Police de caractère */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
+      }
     
