--- a/src/app/rdv/historique/rdv-historique.component.html
+++ b/src/app/rdv/historique/rdv-historique.component.html
@@ -7,7 +7,7 @@
         <th>Délai</th>
         <th>Date et heure</th>
         <th>Client</th>
-        <th>État</th>
+        <th>Payé</th>
       </tr>
     </thead>
     <tbody>
