--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,8 @@
         <span *ngIf="!isFetching" >Log in</span>
         <mat-spinner  style="margin-left: 45%;" color="accent" *ngIf="isFetching" diameter="15" ></mat-spinner>
       </button>
-      
+      <p></p>
+      <span>Pas encore de compte? </span><a [routerLink]="['/inscription']">Inscrivez-vous</a>
     </form>
   </div>
   
