--- a/src/app/user/suivi-taches/suivi-taches.component.css
+++ b/src/app/user/suivi-taches/suivi-taches.component.css
@@ -1,14 +1,20 @@
 .container {
-  border: 2px dashed #ccc;
-  padding: 10px;
-  min-height: 200px; /* Définissez une hauteur minimale pour chaque conteneur de glisser-déposer */
+  display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 2px dashed #ccc;
+    padding: 10px;
+    width: 100%;
+    min-height: 200px;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
 .item {
   background-color: #f0f0f0;
   border: 1px solid #ddd;
-  padding: 10px;
-  margin-bottom: 10px; 
+  padding: 10px; 
+  /* margin-bottom: 10px;  */
   border-radius: 5px; 
   cursor: grab;
 }
@@ -16,16 +22,69 @@
 .mat-grid-tile {
   display: flex;
   justify-content: center; /* Centrez les éléments à l'intérieur des colonnes */
-  height: 400px; 
+  height: 100%;
+  width:100%; 
 }
 
-mat-grid-list {
-  margin: 20px auto; /* Centrez le mat-grid-list sur la page */
+.mat-grid-list {
+   margin: 40px auto; /*Centrez le mat-grid-list sur la page */
 }
-.page-title {
+.list-title {
+  font-size: 24px; /* Taille de police */
+  font-weight: bold; /* Texte en gras */
+  color: #2a9b70;
   margin-bottom: 20px; /* Ajoute un espace en bas du titre de la page */
 }
 
 .column-title {
   margin-bottom: 10px; /* Ajoute un espace en bas des titres de colonne */
+}
+.centered-content{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: grey;
+  height: 100vh;
+}
+.lapage {
+  width: 100%; /* Utilise toute la largeur de la page */
+  margin-top: 40px; /* Marge en haut de la liste */
+  padding: 0 20px; /* Espacement intérieur pour une apparence aérée */
+  box-sizing: border-box; /* Inclut les bordures et les marges dans la largeur totale */
+}
+
+.zones-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  margin-bottom: 20px;
+  
+}
+
+.zone {
+  flex: 1 0 auto;
+  margin: 0 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  min-width: 200px;
+  
+}
+
+.zone-title {
+  margin-top: 0;
+  text-align: center;
+} 
+
+.btn{
+  background-color: #2c5044;
+  color: #ffffff; /* Couleur du texte */
+  text-align: center; /* Alignement du texte au centre */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Police de caractère */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre douce */
 }
