--- a/src/app/user/suivi-taches/suivi-taches.component.html
+++ b/src/app/user/suivi-taches/suivi-taches.component.html
@@ -1,21 +1,53 @@
-<h2 class="page-title">Title</h2> 
-<mat-grid-list cols="3" gutterSize="10px" rowHeight="{{rowHeight}}px">
-    <mat-grid-tile>
-        <h3 class="column-title">À faire</h3>
-        <div class="container" cdkDropList id="afaire" [cdkDropListConnectedTo]="['encours','fini']" [cdkDropListData]="afaire" (cdkDropListDropped)="drop($event)">
-            <div class="item" *ngFor="let item of afaire" cdkDrag>{{item.nom}} - {{item.delai}}min - {{item.prix}}Ar</div>
+<div class="lapage">
+    <h2 class="list-title">Organisation des taches</h2>
+
+    <div class="zones-container">
+        <!-- Zone "A faire" -->
+        <div class="zone">
+            <h3 class="zone-title">A faire</h3>
+            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+                <mat-grid-tile>
+                    <div class="container" cdkDropList id="afaire" [cdkDropListConnectedTo]="['encours']"
+                        [cdkDropListData]="afaire" (cdkDropListDropped)="drop($event)">
+                        <div class="item" *ngFor="let item of afaire" cdkDrag>{{item.nom}} - {{item.delai}}min</div>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
         </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <h3 class="column-title">En cours</h3>
-        <div class="container" cdkDropList id="encours" [cdkDropListConnectedTo]="['afaire','fini']" [cdkDropListData]="encours" (cdkDropListDropped)="drop($event)">
-            <div class="item" *ngFor="let item of encours" cdkDrag>{{item.nom}} - {{item.delai}}min - {{item.prix}}Ar</div>
+
+        <!-- Zone "En cours" -->
+        <div class="zone">
+            <h3 class="zone-title">En cours</h3>
+            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+                <mat-grid-tile>
+                    <div class="container" cdkDropList id="encours" [cdkDropListConnectedTo]="['afaire','fini']"
+                        [cdkDropListData]="encours" (cdkDropListDropped)="drop($event)">
+                        <div class="centered-content" *ngIf="encours.length === 0">
+                            <mat-icon>add_box</mat-icon>
+                            <p>Glissez les taches ici</p>
+                        </div>
+                        <div class="item" *ngFor="let item of encours" cdkDrag>{{item.nom}} - {{item.delai}}min</div>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
         </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <h3 class="column-title">Terminé</h3>
-        <div class="container" cdkDropList id="fini" [cdkDropListConnectedTo]="['afaire','encours']" [cdkDropListData]="fini" (cdkDropListDropped)="drop($event)">
-            <div class="item" *ngFor="let item of fini" cdkDrag>{{item.nom}} - {{item.delai}}min - {{item.prix}}Ar</div>
+
+        <!-- Zone "Fini" -->
+        <div class="zone">
+            <h3 class="zone-title">Fini</h3>
+            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+                <mat-grid-tile>
+                    <div class="container" cdkDropList id="fini" [cdkDropListConnectedTo]="['afaire']"
+                        [cdkDropListData]="fini" (cdkDropListDropped)="drop($event)">
+                        <div class="centered-content" *ngIf="fini.length === 0">
+                            <mat-icon>add_box</mat-icon>
+                            <p>Glissez les taches ici</p>
+                        </div>
+                        <div class="item" *ngFor="let item of fini" cdkDrag>{{item.nom}} - {{item.delai}}min</div>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
         </div>
-    </mat-grid-tile>
-</mat-grid-list>
+    </div>
+    <button class="btn" mat-button (click)="saveChangement(encours,fini)" >Enregistrer</button>
+</div>
