--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                     <mat-icon>event</mat-icon>
                 </div>
                 <mat-card-title>Prochain rendez-vous</mat-card-title>
-                <mat-card-subtitle>{{ rdv.dateHeure | date:'dd-MM-yyyy' }} à {{ rdv.dateHeure | date:'hh:mm' }}</mat-card-subtitle>
+                <mat-card-subtitle>{{ rdv.dateHeure | date:'dd-MM-yyyy' }} à {{ rdv.dateHeure | date:'HH:mm' }}</mat-card-subtitle>
             </mat-card-header>
         </mat-card>
     </div>
