--- a/src/app/user/suivi-taches/suivi-taches.component.html
+++ b/src/app/user/suivi-taches/suivi-taches.component.html
@@ -5,10 +5,13 @@
         <!-- Zone "A faire" -->
         <div class="zone">
             <h3 class="zone-title">A faire</h3>
-            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+            <div *ngIf="errorMessage !== ''" class="error-message">
+                {{ errorMessage }}
+            </div>
+            <mat-grid-list cols="1" >
                 <mat-grid-tile>
                     <div class="container" cdkDropList id="afaire" [cdkDropListConnectedTo]="['encours']"
-                        [cdkDropListData]="afaire" (cdkDropListDropped)="drop($event)">
+                        [cdkDropListData]="afaire" (cdkDropListDropped)="drop($event)" >
                         <div class="item" *ngFor="let item of afaire" cdkDrag>{{item.nom}} - {{item.delai}}min</div>
                     </div>
                 </mat-grid-tile>
@@ -18,7 +21,7 @@
         <!-- Zone "En cours" -->
         <div class="zone">
             <h3 class="zone-title">En cours</h3>
-            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+            <mat-grid-list cols="1" >
                 <mat-grid-tile>
                     <div class="container" cdkDropList id="encours" [cdkDropListConnectedTo]="['afaire','fini']"
                         [cdkDropListData]="encours" (cdkDropListDropped)="drop($event)">
@@ -35,7 +38,7 @@
         <!-- Zone "Fini" -->
         <div class="zone">
             <h3 class="zone-title">Fini</h3>
-            <mat-grid-list cols="1" gutterSize="10px" rowHeight="{{rowHeight}}px">
+            <mat-grid-list cols="1" >
                 <mat-grid-tile>
                     <div class="container" cdkDropList id="fini" [cdkDropListConnectedTo]="['afaire']"
                         [cdkDropListData]="fini" (cdkDropListDropped)="drop($event)">
