--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,6 +20,14 @@
                       <a mat-list-item routerLink="/HistoriqueRDV">Historique</a>
                       <a mat-list-item routerLink="/listeRDV">Aujourd'hui</a>
                   </mat-nav-list>
+                  <mat-expansion-panel *ngIf="isEmploye()">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>Services</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-nav-list>
+                        <a mat-list-item routerLink="/servNonAssigne">Services non-assignés</a>
+                    </mat-nav-list>
+                </mat-expansion-panel>
               </mat-expansion-panel>
           </mat-accordion>
           <mat-nav-list *ngIf="isManager()">
